--- a/Vanessa Oakes- HW - 5 - Matplotlib.ipynb
+++ b/Vanessa Oakes- HW - 5 - Matplotlib.ipynb
@@ -399,6 +399,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Three observable trends based on the data:\n",
+    "\n",
+    "1. Pyber is very popular (over 60%) in an Urban setting.\n",
+    "2. There are more drivers in an urban environment.\n",
+    "3. As fares go from Urban to Rural, the fare increases, indicating that further distances are being traveled.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
